# generate-mcqs

./: .gitignore  README.md  app.py  main.py  mcqs.db  pyproject.toml
templates/: base.html  no_questions.html  question.html  results.html
